[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grandalf>=0.8",
    "ipykernel>=7.1.0",
    "langchain==0.3.24",
    "langchain-openai==0.3.14",
    "langchain-tavily==0.1.6",
    "langgraph==0.3.33",
    "python-dotenv>=1.2.1",
]
